Updated .NET plugin for version 1.9.3.0